# falcon-limiter

./: .gitignore  README.md  flake.nix  pyproject.toml
docs/: async.rst  index.rst  quickstart.rst  recipes.rst
falcon_limiter/: middleware.py
tests/: conftest.py  test_deduct_when.py  test_dynamic_limits.py  test_key_func.py  test_key_prefix.py  test_limiter.py  test_multiple_decorators.py  test_redis.py  test_utils.py
tests/async_tests/: test_key_func.py  test_multiple_decorators.py  test_redis.py
