[project]
name = "falcon-limiter"
version = "0.0.1"
requires-python = ">=3.9"
description = "Falcon rate limiter middleware"
readme = "README.md"
authors = [
  { name = "Zoltan Fedor", email = "zoltan.1.fedor@gmail.com" }
]
dependencies = [
  "falcon>=1.0.0",
  "limits",
  "tox>=4.25.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/zoltan-fedor/falcon-limiter"
Documentation = "https://falcon-limiter.readthedocs.io/en/latest/"

[project.optional-dependencies]
test = [
    "coredis",
    "flit",
    "pylibmc",
    "pytest>=4.0.0",
    "pytest-cov",
    "pytest-pep8",
    "pytest-xdist",
    "pytest-xprocess",
    "redis",
    "tox",
    "tox-pipenv-install"
]
doc = []
dev = []
all = []

[dependency-groups]
dev = [
    "autodoc",
    "bump2version",
    "coredis",
    "hatchling",
    "importlib-metadata",
    "pylibmc",
    "pytest",
    "pytest-cov",
    "pytest-pep8",
    "pytest-xdist",
    "pytest-xprocess",
    "redis",
    "mypy",
    "sphinx",
    "tox",
    "tox-pipenv-install"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
